--- a/.gitattributes
+++ b/.gitattributes
@@ -62,3 +62,5 @@
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.dll filter=lfs diff=lfs merge=lfs -text
+*.a filter=lfs diff=lfs merge=lfs -text
