created Tensor structure implemented 1d tensors (vectors)

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(dataset)
 add_subdirectory(evaluators)
 add_subdirectory(linear)
 add_subdirectory(lossFunctions)
+add_subdirectory(math)
 add_subdirectory(model)
 add_subdirectory(nodes)
 add_subdirectory(predictors)
