--- a/libraries/math/CMakeLists.txt
+++ b/libraries/math/CMakeLists.txt
@@ -12,9 +12,10 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/Tensor.cpp)
+set (SRC src/BlasWrapper.cpp)
 
-set (INCLUDE include/Tensor.h)
+set (INCLUDE include/BlasWrapper.h
+             include/Tensor.h)
 
 set (TCC tcc/Tensor.tcc)
 
