--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -20,16 +20,16 @@ set (SRC src/CompressedIntegerList.cpp
          src/IntegerList.cpp
          src/IntegerStack.cpp
          src/ObjectArchive.cpp
-         src/ObjectArchiveSerializer.cpp
+         src/ObjectArchiver.cpp
          src/OutputStreamImpostor.cpp
          src/RandomEngines.cpp
-         src/Serializer.cpp
-         src/JsonSerializer.cpp
+         src/Archiver.cpp
+         src/JsonArchiver.cpp
          src/Tokenizer.cpp
          src/TypeName.cpp
          src/UniqueId.cpp
          src/Variant.cpp
-         src/XMLSerializer.cpp)
+         src/XMLArchiver.cpp)
 
 set (INCLUDE include/Archiver.h
              include/CompressedIntegerList.h
@@ -41,14 +41,14 @@ set (INCLUDE include/Archiver.h
              include/IntegerList.h
              include/IntegerStack.h
              include/ISerializable.h
-             include/JsonSerializer.h
+             include/JsonArchiver.h
              include/ObjectArchive.h
-             include/ObjectArchiveSerializer.h
+             include/ObjectArchiver.h
              include/OutputStreamImpostor.h
              include/ParallelTransformIterator.h
              include/Parser.h
              include/RandomEngines.h
-             include/Serializer.h
+             include/Archiver.h
              include/StlIndexValueIterator.h
              include/StlIterator.h
              include/Tokenizer.h
@@ -58,18 +58,18 @@ set (INCLUDE include/Archiver.h
              include/TypeTraits.h
              include/UniqueId.h
              include/Variant.h
-             include/XMLSerializer.h)
+             include/XMLArchiver.h)
 
 set (TCC tcc/AnyIterator.tcc
          tcc/CommandLineParser.tcc
          tcc/Exception.tcc
          tcc/Format.tcc
-         tcc/JsonSerializer.tcc
+         tcc/JsonArchiver.tcc
          tcc/ObjectArchive.tcc
-         tcc/ObjectArchiveSerializer.tcc
+         tcc/ObjectArchiver.tcc
          tcc/ParallelTransformIterator.tcc
          tcc/Parser.tcc
-         tcc/Serializer.tcc
+         tcc/Archiver.tcc
          tcc/StlIndexValueIterator.tcc
          tcc/StlIterator.tcc
          tcc/TransformIterator.tcc
@@ -77,7 +77,7 @@ set (TCC tcc/AnyIterator.tcc
          tcc/TypeName.tcc
          tcc/TypeTraits.tcc
          tcc/Variant.tcc
-         tcc/XMLSerializer.tcc)
+         tcc/XMLArchiver.tcc)
 
 source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
