hooked in openblas

--- a/libraries/math/CMakeLists.txt
+++ b/libraries/math/CMakeLists.txt
@@ -23,12 +23,14 @@ source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
 source_group("tcc" FILES ${TCC})
 
+set (OpenBLASDirectory ../../private/dependencies/OpenBLAS/win64/v0.2.19/sandybridge/include)
+
 add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
-target_include_directories(${PROJ_NAME} PUBLIC include)
+target_include_directories(${PROJ_NAME} PUBLIC include ${OpenBLASDirectory})
 if(CMAKE_COMPILER_IS_GNUCXX)
   target_compile_options(${PROJ_NAME} PRIVATE -fPIC)
 endif()
-target_link_libraries(${PROJ_NAME} utilities)
+target_link_libraries(${PROJ_NAME} utilities ${CMAKE_SOURCE_DIR}/private/dependencies/OpenBLAS/win64/v0.2.19/sandybridge/lib/libopenblas.a)
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
