Decouple Emitter from Compiler

--- a/libraries/compiler/CMakeLists.txt
+++ b/libraries/compiler/CMakeLists.txt
@@ -63,6 +63,7 @@ set (INCLUDE include/LLVMInclude.h
 )
 
 set (TCC tcc/SymbolTable.tcc
+		tcc/Types.tcc
 		 tcc/Variable.tcc
 		 tcc/ScalarVar.tcc
 		 tcc/VectorVar.tcc
