More SWIG cleanup with new emll namespace

--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -45,7 +45,7 @@ include_directories(common/include)
 
 add_subdirectory(common)
 add_subdirectory(python)
-# add_subdirectory(R) # currently doesn't compile because std_shared_ptr.i doesn't exist for R
+# add_subdirectory(R) # currently doesn't compile
 add_subdirectory(csharp)
 add_subdirectory(javascript)
 add_subdirectory(xml) 
