separated blas and native operations to two separate tcc files All tests pass

--- a/libraries/math/CMakeLists.txt
+++ b/libraries/math/CMakeLists.txt
@@ -20,9 +20,10 @@ set (INCLUDE include/BlasWrapper.h
              include/Operations.h
              include/Print.h)
 
-set (TCC tcc/Matrix.tcc
+set (TCC tcc/BlasOperations.tcc
+         tcc/Matrix.tcc
          tcc/Vector.tcc
-         tcc/Operations.tcc
+         tcc/NativeOperations.tcc
          tcc/Print.tcc)
 
 source_group("src" FILES ${SRC})
