Added common_test.py for the common library

--- a/interfaces/python/test/CMakeLists.txt
+++ b/interfaces/python/test/CMakeLists.txt
@@ -6,7 +6,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
 set (PROJ_NAME emll-python-interface-tests)
 project(${PROJ_NAME})
-set (SRC test.py testing.py lossfunctions_test.py model_test.py)
+set (SRC test.py testing.py lossfunctions_test.py model_test.py common_test.py)
 add_custom_target(${PROJ_NAME} ALL DEPENDS ${SRC} SOURCES ${SRC})
 
 # copy the contents of the test directory to build/interfaces/python
