Add DynamicMap class
Added non-templated DynamicMap class that wraps a model. Serialization not completely implemented for it yet.

--- a/libraries/model/CMakeLists.txt
+++ b/libraries/model/CMakeLists.txt
@@ -12,7 +12,9 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/Model.cpp
+set (SRC src/DynamicMap.cpp
+         src/InputNode.cpp
+         src/Model.cpp
          src/ModelTransformer.cpp
          src/Node.cpp
          src/OutputPort.cpp
@@ -20,7 +22,8 @@ set (SRC src/Model.cpp
          src/Port.cpp
 )
 
-set (INCLUDE include/InputNode.h
+set (INCLUDE include/DynamicMap.h
+             include/InputNode.h
              include/InputPort.h
              include/Map.h
              include/Model.h
@@ -32,7 +35,8 @@ set (INCLUDE include/InputNode.h
              include/Port.h
 )
 
-set (TCC tcc/InputNode.tcc
+set (TCC tcc/DynamicMap.tcc
+         tcc/InputNode.tcc
          tcc/InputPort.tcc
          tcc/Map.tcc
          tcc/Model.tcc
@@ -65,10 +69,12 @@ set (TEST_NAME ${PROJ_NAME}_test)
 PROJECT(${TEST_NAME})
 
 set (TEST_SRC test/src/main.cpp
+              test/src/DynamicMap_test.cpp
               test/src/Map_test.cpp
               test/src/Model_test.cpp
               test/src/PortElements_test.cpp)
 set (TEST_INCLUDE test/include/PortElements_test.h
+                  test/include/DynamicMap_test.h
                   test/include/Map_test.h
                   test/include/Model_test.h)
 
