--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -3,12 +3,9 @@
 #
 include (CommonInterfaces)
 
-set (INTERFACE_SRC ../common/src/DataLoadersInterface.cpp
-                   ../common/src/RowDatasetInterface.cpp)
+set (INTERFACE_SRC ../common/src/DataLoadersInterface.cpp)
 
-set (INTERFACE_INCLUDE ../common/include/DataLoadersInterface.h
-                       ../common/include/RowDatasetInterface.h
-                       ../common/include/SGDIncrementalTrainer_wrap.h)
+set (INTERFACE_INCLUDE ../common/include/DataLoadersInterface.h)
 
 set (INTERFACE_MAIN ../common/EMLL.i)
 
