Started writing 'apply' tool

--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -45,6 +45,7 @@ set (INCLUDE include/DataLoadArguments.h
 )
 
 set (TCC tcc/IsNodeCompilable.tcc
+         tcc/DataLoaders.tcc
          tcc/MakeEvaluator.tcc
          tcc/ParametersEnumerator.tcc
 )
