--- a/libraries/model/CMakeLists.txt
+++ b/libraries/model/CMakeLists.txt
@@ -56,7 +56,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
   target_compile_options(${PROJ_NAME} PRIVATE -fPIC)
 endif()
 
-target_link_libraries(${PROJ_NAME} utilities)
+target_link_libraries(${PROJ_NAME} utilities dataset)
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
