--- a/tools/utilities/CMakeLists.txt
+++ b/tools/utilities/CMakeLists.txt
@@ -7,3 +7,4 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 add_subdirectory(apply)
 add_subdirectory(compile)
 add_subdirectory(print)
+add_subdirectory(makeExamples)
